Added welcome div

--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
         <a href="/index.html" class="active">Home</a>
         <a href="/projects.html">Projects</a>
     </nav>
-
+    <div id="welcome"></div>
     <section class="center">
         <h2>About Alex</h2>
         <img src="/img/fam.jpg" alt="family" width="200px"/>
         <p > My name is Alex Stacey, and I'm a former attorney who after five years of practicing law decided to change careers unto a field I truly have passion for: computer science and software engineering. I enjoy building stuff, breaking more stuff, and working with data.</p>
         <p>Some of my favorite books include the Count of Monte Cristo, Brave New World, and Catch-22 - just to name a few.
-
     </section>
+    
 
     <footer>
         <p>&copy; 2024 Alex Stacey. All rights reserved.</p>
